Cython Trial/RSA_API.h

	///////////////////////////////////////////////////////////
	// Status and Error Reporting
	///////////////////////////////////////////////////////////
	// Note: The assigned enumeration values in this list have
	//        been modified between V1 and V2 releases.
	///////////////////////////////////////////////////////////

	typedef enum
	{
		//-----------------
		// User errors
		//-----------------

		noError = 0,

		// Connection
		errorNotConnected = 101,
		errorIncompatibleFirmware,
		errorBootLoaderNotRunning,
		errorTooManyBootLoadersConnected,
		errorRebootFailure,

		// POST
		errorPOSTFailureFPGALoad = 201,
		errorPOSTFailureHiPower,
		errorPOSTFailureI2C,
		errorPOSTFailureGPIF,
		errorPOSTFailureUsbSpeed,
		errorPOSTDiagFailure,

		// General Msmt
		errorBufferAllocFailed = 301,
		errorParameter,
		errorDataNotReady,

		// Spectrum
		errorParameterTraceLength = 1101,
		errorMeasurementNotEnabled,
		errorSpanIsLessThanRBW,
		errorFrequencyOutOfRange,

		// IF streaming
		errorStreamADCToDiskFileOpen = 1201,
        errorStreamADCToDiskAlreadyStreaming,
        errorStreamADCToDiskBadPath,
        errorStreamADCToDiskThreadFailure,
        errorStreamedFileInvalidHeader,
        errorStreamedFileOpenFailure,
        errorStreamingOperationNotSupported,
        errorStreamingFastForwardTimeInvalid,
        errorStreamingInvalidParameters,
        errorStreamingEOF,

		// IQ streaming
		errorIQStreamInvalidFileDataType = 1301,
		errorIQStreamFileOpenFailed,
		errorIQStreamBandwidthOutOfRange,


		//-----------------
		// Internal errors
		//-----------------
		errorTimeout = 3001,
		errorTransfer,
		errorFileOpen,
		errorFailed,
		errorCRC,
		errorChangeToFlashMode,
		errorChangeToRunMode,
		errorDSPLError,
		errorLOLockFailure,
		errorExternalReferenceNotEnabled,
		errorLogFailure,
		errorRegisterIO,
        errorFileRead,

		errorDisconnectedDeviceRemoved = 3101,
		errorDisconnectedDeviceNodeChangedAndRemoved,
		errorDisconnectedTimeoutWaitingForADcData,
		errorDisconnectedIOBeginTransfer,
		errorOperationNotSupportedInSimMode,

		errorFPGAConfigureFailure = 3201,
        errorCalCWNormFailure,
        errorSystemAppDataDirectory,
        errorFileCreateMRU,
        errorDeleteUnsuitableCachePath,
        errorUnableToSetFilePermissions,
        errorCreateCachePath,
        errorCreateCachePathBoost,
        errorCreateCachePathStd,
        errorCreateCachePathGen,
        errorBufferLengthTooSmall,
        errorRemoveCachePath,
        errorGetCachingDirectoryBoost,
        errorGetCachingDirectoryStd,
        errorGetCachingDirectoryGen,
        errorInconsistentFileSystem,

		errorWriteCalConfigHeader = 3301,
		errorWriteCalConfigData,
		errorReadCalConfigHeader,
		errorReadCalConfigData,
		errorEraseCalConfig,
		errorCalConfigFileSize,
		errorInvalidCalibConstantFileFormat,
		errorMismatchCalibConstantsSize,
		errorCalConfigInvalid,

        // flash
        errorFlashFileSystemUnexpectedSize = 3401,
        errorFlashFileSystemNotMounted,
        errorFlashFileSystemOutOfRange,
        errorFlashFileSystemIndexNotFound,
        errorFlashFileSystemReadErrorCRC,
        errorFlashFileSystemReadFileMissing,
        errorFlashFileSystemCreateCacheIndex,
        errorFlashFileSystemCreateCachedDataFile,
        errorFlashFileSystemUnsupportedFileSize,
        errorFlashFileSystemInsufficentSpace,
        errorFlashFileSystemInconsistentState,
        errorFlashFileSystemTooManyFiles,
        errorFlashFileSystemImportFileNotFound,
        errorFlashFileSystemImportFileReadError,
        errorFlashFileSystemImportFileError,
        errorFlashFileSystemFileNotFoundError,
        errorFlashFileSystemReadBufferTooSmall,
        errorFlashWriteFailure,
        errorFlashReadFailure,
        errorFlashFileSystemBadArgument,
        errorFlashFileSystemCreateFile,

        // Aux monitoring
        errorMonitoringNotSupported = 3501,
        errorAuxDataNotAvailable,

        // battery
        errorBatteryCommFailure = 3601,
		errorBatteryChargerCommFailure = 3602,
		errorBatteryNotPresent = 3603,

		//EST
		errorESTOutputPathFile = 3701,
		errorESTPathNotDirectory,
		errorESTPathDoesntExist,
		errorESTUnableToOpenLog,
		errorESTUnableToOpenLimits,

		// Revision information
		errorRevisionDataNotFound = 3801,
		
		//  alignment
		error112MHzAlignmentSignalLevelTooLow = 3901,
		error10MHzAlignmentSignalLevelTooLow,
		errorInvalidCalConstant,
        errorNormalizationCacheInvalid,
        errorInvalidAlignmentCache,

		// acq status
        errorADCOverrange = 9000,	// must not change the location of these error codes without coordinating with MFG TEST
        errorOscUnlock = 9001,      

		errorNotSupported = 9901,

        errorPlaceholder = 9999,
        notImplemented = -1

	} ReturnStatus;
	// Create a bool type for "plain" C
	typedef uint8_t bool;
	// Complex data type definitions
	typedef struct
	{
		float i;
		float q;
	} Cplx32;
	typedef enum
	{
		adcOverrange = 0x1,				// Bit 0: Overrange - Input to the ADC was outside of its operating range.
		refFreqUnlock = 0x2,			// Bit 1: Reference oscillator unlocked - Loss of locked status on the reference oscillator.
		lo1Unlock = 0x4,				// Bit 2: Internal use only
		lo2Unlock = 0x8,				// Bit 3: Internal use only
		lowSupplyVoltage = 0x10,		// Bit 4: Power fail - Power (5V and Usb) failure detected.
		adcDataLost = 0x20,				// Bit 5: Dropped frame - Loss of ADC data frame samples
		event1pps = 0x40,				// Bit 6: Internal use only
		eventTrig1 = 0x80,				// Bit 7: Internal use only
		eventTrig2 = 0x100,				// Bit 8: Internal use only
	} AcqDataStatus;
	
	
	// Device Search, Type 2 (API provides internal static storage buffers, client may copy if needed)
	// Example: 
	// int numDev;
	// int* devID;						// ptr to devID array
	// const {char|wchar_t}** devSN;	// ptr to array of ptrs to devSN strings
	// const {char|wchar_t}** devType;	// ptr to array of ptrs to devType strings
	// rs = RSA_API::DEVICE_SearchInt{W}(&numDev, &devID, &devSN, &devType);
	RSA_API_DLL ReturnStatus DEVICE_SearchInt(int* numDevicesFound, int* deviceIDs[], const char** deviceSerial[], const char** deviceType[]);
	
	///////////////////////////////////////////////////////////
	// System/Reference Time 
	///////////////////////////////////////////////////////////

	RSA_API_DLL  ReturnStatus REFTIME_GetTimestampRate(uint64_t* o_refTimestampRate);
	RSA_API_DLL  ReturnStatus REFTIME_GetCurrentTime(time_t* o_timeSec, uint64_t* o_timeNsec, uint64_t* o_timestamp);
	RSA_API_DLL  ReturnStatus REFTIME_GetTimeFromTimestamp(uint64_t i_timestamp, time_t* o_timeSec, uint64_t* o_timeNsec);
	RSA_API_DLL  ReturnStatus REFTIME_GetTimestampFromTime(time_t i_timeSec, uint64_t i_timeNsec, uint64_t* o_timestamp);
	RSA_API_DLL  ReturnStatus REFTIME_GetIntervalSinceRefTimeSet(double* sec);
	RSA_API_DLL  ReturnStatus REFTIME_SetReferenceTime(time_t refTimeSec, uint64_t refTimeNsec, uint64_t refTimestamp);
	RSA_API_DLL  ReturnStatus REFTIME_GetReferenceTime(time_t* refTimeSec, uint64_t* refTimeNsec, uint64_t* refTimestamp);
	RSA_API_DLL ReturnStatus IQBLK_GetMaxIQBandwidth(double* maxBandwidth);
	RSA_API_DLL ReturnStatus IQBLK_GetMinIQBandwidth(double* minBandwidth);
	RSA_API_DLL ReturnStatus IQBLK_GetMaxIQRecordLength(int* maxSamples);
	
	RSA_API_DLL ReturnStatus IQBLK_SetIQBandwidth(double iqBandwidth);
	RSA_API_DLL ReturnStatus IQBLK_GetIQBandwidth(double* iqBandwidth);
	RSA_API_DLL ReturnStatus IQBLK_GetIQSampleRate(double* iqSampleRate);
	RSA_API_DLL ReturnStatus IQBLK_SetIQRecordLength(int recordLength);
	RSA_API_DLL ReturnStatus IQBLK_GetIQRecordLength(int* recordLength);
	RSA_API_DLL ReturnStatus IQBLK_AcquireIQData();
	RSA_API_DLL ReturnStatus IQBLK_WaitForIQDataReady(int timeoutMsec, bool* ready);
	RSA_API_DLL ReturnStatus IQBLK_GetIQData(float* iqData, int* outLength, int reqLength);
	RSA_API_DLL ReturnStatus IQBLK_GetIQDataDeinterleaved(float* iData, float* qData, int* outLength, int reqLength);
	RSA_API_DLL ReturnStatus IQBLK_GetIQDataCplx(Cplx32* iqData, int* outLength, int reqLength);
	typedef struct
	{
		uint64_t  sample0Timestamp;         // timestamp of first sample in block 
		uint64_t  triggerSampleIndex;       // sample index of trigger event in block
		uint64_t  triggerTimestamp;         // timestamp of trigger event in block
		uint32_t  acqStatus;				// 0:no errors, >0:acq events/issues; see IQBLK_STATUS_* bit enums to decode...
	} IQBLK_ACQINFO;
	RSA_API_DLL ReturnStatus IQBLK_GetIQAcqInfo(IQBLK_ACQINFO* acqInfo);   // Query IQ block acquisition info
	// Query IQ block acquisition status
	typedef struct
	{
		uint16_t acqDataStatus;				// See AcqDataStatus enumeration for bit definitions
		uint64_t acquisitionTimestamp;
		uint32_t frameID;
		uint16_t trigger1Index;
		uint16_t trigger2Index;
		uint16_t timeSyncIndex;
	} IQHeader;
	RSA300_API_DLL ReturnStatus GetIQHeader(IQHeader* header);
	
	///////////////////////////////////////////////////////////
	// Spectrum Trace acquisition
	///////////////////////////////////////////////////////////

	//  Spectrum windowing functions
	typedef enum
	{
		SpectrumWindow_Kaiser = 0,
		SpectrumWindow_Mil6dB = 1,
		SpectrumWindow_BlackmanHarris = 2,
		SpectrumWindow_Rectangle = 3,
		SpectrumWindow_FlatTop = 4,
		SpectrumWindow_Hann = 5
	} SpectrumWindows;
	//  Spectrum traces
	typedef enum
	{
		SpectrumTrace1 = 0,
		SpectrumTrace2 = 1,
		SpectrumTrace3 = 2
	} SpectrumTraces;
	//  Spectrum trace detector
	typedef enum
	{
		SpectrumDetector_PosPeak = 0,
		SpectrumDetector_NegPeak = 1,
		SpectrumDetector_AverageVRMS = 2,
		SpectrumDetector_Sample = 3
	} SpectrumDetectors;
	//  Spectrum trace output vertical unit
	typedef enum
	{
		SpectrumVerticalUnit_dBm = 0,
		SpectrumVerticalUnit_Watt = 1,
		SpectrumVerticalUnit_Volt = 2,
		SpectrumVerticalUnit_Amp = 3,
		SpectrumVerticalUnit_dBmV = 4
	} SpectrumVerticalUnits;
	//  Spectrum settings structure
	//  The actual values are returned from SPECTRUM_GetSettings() function
	//  Use SPECTRUM_GetLimits() to get the limits of the settings
	typedef struct
	{
		double span;
		double rbw;
		bool enableVBW;
		double vbw;
		int traceLength;					//  MUST be odd number
		SpectrumWindows window;
		SpectrumVerticalUnits verticalUnit;

		//  additional settings return from SPECTRUM_GetSettings()
		double actualStartFreq;
		double actualStopFreq;
		double actualFreqStepSize;
		double actualRBW;
		double actualVBW;
		int actualNumIQSamples;
	} Spectrum_Settings;
	//  Spectrum limits
	typedef struct
	{
		double maxSpan;
		double minSpan;
		double maxRBW;
		double minRBW;
		double maxVBW;
		double minVBW;
		int maxTraceLength;
		int minTraceLength;
	} Spectrum_Limits;
	//  Spectrum result trace information
	typedef struct
	{
		uint64_t timestamp;			//  timestamp of the first acquisition sample
		uint16_t acqDataStatus;		// See AcqDataStatus enumeration for bit definitions
	} Spectrum_TraceInfo;
	//  Enable/disable Spectrum measurement
	RSA_API_DLL ReturnStatus SPECTRUM_SetEnable(bool enable);
	RSA_API_DLL ReturnStatus SPECTRUM_GetEnable(bool *enable);
	//  Set spectrum settings to default values
	RSA_API_DLL ReturnStatus SPECTRUM_SetDefault();
	//  Set/get spectrum settings
	RSA_API_DLL ReturnStatus SPECTRUM_SetSettings(Spectrum_Settings settings);
	RSA_API_DLL ReturnStatus SPECTRUM_GetSettings(Spectrum_Settings *settings);
	//  Set/get spectrum trace settings
	RSA_API_DLL ReturnStatus SPECTRUM_SetTraceType(SpectrumTraces trace, bool enable, SpectrumDetectors detector);
	RSA_API_DLL ReturnStatus SPECTRUM_GetTraceType(SpectrumTraces trace, bool *enable, SpectrumDetectors *detector);
	//  Get spectrum setting limits
	RSA_API_DLL ReturnStatus SPECTRUM_GetLimits(Spectrum_Limits *limits);
	//  Start Trace acquisition
	RSA_API_DLL ReturnStatus SPECTRUM_AcquireTrace();
	//  Wait for spectrum trace ready
	RSA_API_DLL ReturnStatus SPECTRUM_WaitForTraceReady(int timeoutMsec, bool *ready);
	//  Get spectrum trace data
	RSA_API_DLL ReturnStatus SPECTRUM_GetTrace(SpectrumTraces trace, int maxTracePoints, float *traceData, int *outTracePoints);
	//  Get spectrum trace result information
	RSA_API_DLL ReturnStatus SPECTRUM_GetTraceInfo(Spectrum_TraceInfo *traceInfo);