Cython Trial/rsa_api_h.pxd

    
    ReturnStatus REFTIME_GetTimestampRate(uint64_t* o_refTimestampRate)
    ReturnStatus REFTIME_GetCurrentTime(Py_ssize_t* o_timeSec, uint64_t* o_timeNsec, uint64_t* o_timestamp)
    ReturnStatus REFTIME_GetTimeFromTimestamp(uint64_t i_timestamp, Py_ssize_t* o_timeSec, uint64_t* o_timeNsec)
    ReturnStatus REFTIME_GetTimestampFromTime(Py_ssize_t i_timeSec, uint64_t i_timeNsec, uint64_t* o_timestamp)
    ReturnStatus REFTIME_GetIntervalSinceRefTimeSet(double* sec)
    
    ReturnStatus REFTIME_SetReferenceTime(Py_ssize_t refTimeSec, uint64_t refTimeNsec, uint64_t refTimestamp)
    ReturnStatus REFTIME_GetReferenceTime(Py_ssize_t* refTimeSec, uint64_t* refTimeNsec, uint64_t* refTimestamp)
    
    ##########################################################
    # IQ Block Data aquisition
    ##########################################################
    
    ReturnStatus IQBLK_GetMaxIQBandwidth(double* maxBandwidth)
    ReturnStatus IQBLK_GetMinIQBandwidth(double* minBandwidth)
    ReturnStatus IQBLK_GetMaxIQRecordLength(int* maxSamples)
    
    ReturnStatus IQBLK_SetIQBandwidth(double iqBandwidth)
    ReturnStatus IQBLK_GetIQBandwidth(double* iqBandwidth)
    ReturnStatus IQBLK_GetIQSampleRate(double* iqSampleRate)
    ReturnStatus IQBLK_SetIQRecordLength(int recordLength)
    ReturnStatus IQBLK_GetIQRecordLength(int* recordLength)
    
    ReturnStatus IQBLK_AcquireIQData()
    ReturnStatus IQBLK_WaitForIQDataReady(int timeoutMsec, bint* ready)
    
    ReturnStatus IQBLK_GetIQData(float* iqData, int* outLength, int reqLength)
    ReturnStatus IQBLK_GetIQDataDeinterleaved(float* iData, float* qData, int* outLength, int reqLength)
    ReturnStatus IQBLK_GetIQDataCplx(Cplx32* iqData, int* outLength, int reqLength)
    
    # IQBLK_STATUS enum defined in rsa_api.pyx
    
    ctypedef struct IQBLK_ACQINFO:
        uint64_t sample0Timestamp
        uint64_t triggerSampleIndex
        uint64_t triggerTimestamp
        int acqStatus
    
    ReturnStatus IQBLK_GetIQAcqInfo(IQBLK_ACQINFO * acqInfo)
    
    ctypedef struct IQHeader:
        int acqDataStatus
        uint64_t acquisitionTimestamp
        int frameID
        int trigger1Index
        int trigger2Index
        int timeSyncIndex
    
    ReturnStatus GetIQHeader(IQHeader* header)
    
    ##########################################################
    # Spectrum Trace Acquisition
    ##########################################################
    
    ctypedef enum SpectrumWindows:
        SpectrumWindow_Kaiser = 0
        SpectrumWindow_Mil6dB = 1
        SpectrumWindow_BlackmanHarris = 2
        SpectrumWindow_Rectangle = 3
        SpectrumWindow_FlatTop = 4
        SpectrumWindow_Hann = 5
    
    ctypedef enum SpectrumTraces:
        SpectrumTrace1 = 0
        SpectrumTrace2 = 1
        SpectrumTrace3 = 2
    
    ctypedef enum SpectrumDetectors:
        SpectrumDetector_PosPeak = 0
        SpectrumDetector_NegPeak = 1
        SpectrumDetector_AverageVRMS = 2
        SpectrumDetector_Sample = 3
    
    ctypedef enum SpectrumVerticalUnits:
        SpectrumVerticalUnit_dBm = 0
        SpectrumVerticalUnit_Watt = 1
        SpectrumVerticalUnit_Volt = 2
        SpectrumVerticalUnit_Amp = 3
        SpectrumVerticalUnit_dBmV = 4
    
    # Spectrum settings structure
    # The actual values are returned from SPECTRUM_GetSettings() function
    # Use SPECTRUM_GetLimits() to get the limits of the settings
    ctypedef struct Spectrum_Settings:
        double span
        double rbw
        bint enableVBW
        double vbw
        int traceLength     # MUST be odd number
        SpectrumWindows window
        SpectrumVerticalUnits verticalUnit
    
        # additional settings return from SPECTRUM_GetSettings()
        double actualStartFreq
        double actualStopFreq
        double actualFreqStepSize
        double actualRBW
        double actualVBW
        int actualNumIQSamples
    
    ctypedef struct Spectrum_Limits:
        double maxSpan
        double minSpan
        double maxRBW
        double minRBW
        double maxVBW
        double minVBW
        int maxTraceLength
        int minTraceLength
    
    ctypedef struct Spectrum_TraceInfo:
        uint64_t timestamp       # timestamp of the first acquisition sample
        int acqDataStatus	# See AcqDataStatus enumeration for bit definitions
    
    ReturnStatus SPECTRUM_SetEnable(bint enable)
    ReturnStatus SPECTRUM_GetEnable(bint* enable)
    ReturnStatus SPECTRUM_SetDefault()
    ReturnStatus SPECTRUM_SetSettings(Spectrum_Settings settings)
    ReturnStatus SPECTRUM_GetSettings(Spectrum_Settings* settings)
    ReturnStatus SPECTRUM_SetTraceType(SpectrumTraces trace, bint enable, SpectrumDetectors detector)
    ReturnStatus SPECTRUM_GetTraceType(SpectrumTraces trace, bint* enable, SpectrumDetectors* detector)
    ReturnStatus SPECTRUM_GetLimits(Spectrum_Limits* limits)
    
    ReturnStatus SPECTRUM_AcquireTrace()
    ReturnStatus SPECTRUM_WaitForTraceReady(int timeoutMsec, bint* ready)
    
    ReturnStatus SPECTRUM_GetTrace(SpectrumTraces trace, int maxTracePoints, float* traceData, int* outTracePoints)
    ReturnStatus SPECTRUM_GetTraceInfo(Spectrum_TraceInfo* traceInfo)
    
    ##########################################################
    # DPX Bitmap, Trace, and Spectrogram
    ##########################################################


# DEVICE_SearchInt usage
    # cdef int numDevicesFound = 0
    # cdef int* deviceIDs
    # cdef char** deviceSerial
    # cdef char** deviceType

    # rs = DEVICE_SearchInt(&numDevicesFound, &deviceIDs, &deviceSerial, &deviceType)
    # print('Number of devices: {}'.format(numDevicesFound))
    # print('Device serial numbers: {}'.format(deviceSerial[0]))
    # print('Device type: {}'.format(deviceType[0]))

